--- a/helm.yaml
+++ b/helm.yaml
@@ -3,3 +3,21 @@ image:
 
 port: 8080
 component: catalogue
+
+serviceAccount:
+  create: true
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::752442278108:role/eks-prod-ssm-pm-role
+
+PARAMETERS: "DOCUMENTDB,roboshop.prod.catalogue.mongo MONGO_URL,roboshop.prod.catalogue.mongo_url DOCDB_ENDPOINT,roboshop.prod.catalogue.docdb_endpoint DOCDB_USERNAME,roboshop.prod.docdb.username DOCDB_PASSWORD,roboshop.prod.docdb.password COMPONENT,catalogue SCHEMA_TYPE,mongo"
+
+schemaInitContainer:
+  enabled: true
+
+resources:
+  limits:
+    cpu: 350m
+    memory: 712Mi
+  requests:
+    cpu: 250m
+    memory: 512Mi
